<resources>
    <string name="app_name">MagicCameraX</string>

    <!--==============UI======================-->
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>

    <string name="permisson_deny">权限未开通</string>
    <string name="lens_error">无摄像头可用</string>
    <string name="init_error">摄像头初始化失败</string>

    <string name="dialog_permisson_msg">部分权限未开启，相机将无法正常工作</string>
    <string name="dialog_permisson_pos">去开启</string>
    <string name="dialog_permisson_neg">退出</string>

    <string name="share_default">"分享到..."</string>
</resources>