<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.robin.camerax.viewmodel.PhotoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pagerPhotos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:contentDescription="@string/back_button_alt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:onClick="@{viewModel::onBackPress}"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/share_button"
            android:contentDescription="@string/share_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:onClick="@{viewModel::onSharePress}"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_share" />

        <ImageButton
            android:id="@+id/delete_button"
            android:contentDescription="@string/delete_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:onClick="@{viewModel::onDeletePress}"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_delete" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupPreviewActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="back_button,share_button,delete_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>